Data fixes - right align button

--- a/css/rtc.css
+++ b/css/rtc.css
@@ -38,3 +38,8 @@ span.card-title{
 navbar{
     border-bottom: 1px solid gray;
 }
+
+a.resultsBtn{
+    float: right;
+    margin-right: 20px;
+}
